<resources>
    <string name="app_name">R&amp;D Smart Clipper</string>

    <string name="settings">Settings</string>
    <string name="voltage_chart">Voltage Chart</string>
    <string name="temperature_chart">Temperature Chart</string>
    <string name="rpm_chart">RPM Chart</string>
    <string name="current_chart">Current Chart</string>
    <string name="set_y_limit">Y-Limit</string>
    <string name="voltage_n_a">Voltage: N/A</string>
    <string name="current_n_a">Current: N/A</string>
    <string name="temperature_n_a">Temperature: N/A</string>
    <string name="rpm_n_a">RPM: N/A</string>
    <string name="acceleration_chart">Acceleration Chart</string>
    <string name="acceleration_n_a">Acceleration: N/A</string>
    <string name="home">Home</string>
    <string name="charts">Charts</string>
    <string name="combined_chart">Combined Chart</string>
    <string name="_3d_model">3D Model</string>
    <string name="lower_limit">Lower Y-Limit</string>
    <string name="upper_limit">Upper Y-Limit</string>
    <string name="open_voltage_chart">Open Voltage Chart</string>
    <string name="set_voltage_y_limits">Set Voltage Y-Limits</string>
    <string name="open_current_chart">Open Current Chart</string>
    <string name="set_current_y_limits">Set Current Y-Limits</string>
    <string name="open_acceleration_chart">Open Acceleration Chart</string>
    <string name="set_acceleration_y_limits">Set Acceleration Y-Limits</string>
    <string name="open_rpm_chart">Open RPM Chart</string>
    <string name="set_rpm_y_limits">Set RPM Y-Limits</string>
    <string name="open_temperature_chart">Open Temperature Chart</string>
    <string name="set_temperature_y_limits">Set Temperature Y-Limits</string>
    <string name="average">Average</string>
    <string name="parameter">Parameter</string>
    <string name="current">Current</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="rpm">RPM</string>
    <string name="acceleration">Acceleration</string>
    <string name="n_a">N/A</string>
    <string name="min_n_a">Min: N/A</string>
    <string name="max_n_a">Max: N/A</string>
    <string name="avg_n_a">Avg: N/A</string>

    <string-array name="model_types">
        <item>MC Assembly</item>
        <item>Cube</item>
    </string-array>
</resources>