<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_charts"
        android:icon="@drawable/ic_gallery_black_24dp"
        android:title="@string/charts" />
    <item
        android:id="@+id/navigation_combined_chart"
        android:icon="@drawable/ic_slideshow_black_24dp"
        android:title="@string/combined_chart" />
    <item
        android:id="@+id/navigation_3d_model"
        android:icon="@drawable/ic_3d_model_black_24dp"
        android:title="@string/_3d_model" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
</menu>
